--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -1,8 +1,8 @@
 projects:
-  photoportfolio:
-    schemaPath: amplify/backend/api/photoportfolio/build/schema.graphql
+  photoportfolio-staging:
+    schemaPath: src/graphql/schema.json
     includes:
-      - src/graphql/**/*.js
+      - src/graphql/
     excludes:
       - ./amplify/**
     extensions:
@@ -10,6 +10,9 @@ projects:
         codeGenTarget: javascript
         generatedFileName: ''
         docsFilePath: src/graphql
+        region: us-east-2
+        apiId: s7puinoagvetfhrwlghwa3kpsa
+        maxDepth: 2
 extensions:
   amplify:
     version: 3
