--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
