--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-anchor-link-smooth-scroll": "^1.0.4",
     "aws-amplify": "^5.3.11",
+    "exif-js": "^2.3.0",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
