--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -22,9 +22,9 @@
           ],
           "defaultAuthentication": {
             "apiKeyConfig": {
-              "apiKeyExpirationDate": "2023-11-10T13:13:05.542Z",
-              "apiKeyExpirationDays": 7,
-              "description": ""
+              "apiKeyExpirationDate": "2023-12-03T09:06:52.415Z",
+              "apiKeyExpirationDays": 30,
+              "description": "photoportfolioapikey"
             },
             "authenticationType": "API_KEY"
           }
