--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -1,8 +1,8 @@
 projects:
-  photoportfolio-staging:
+  photoportfolio:
     schemaPath: src/graphql/schema.json
     includes:
-      - src/graphql/
+      - src/graphql/**/*.js
     excludes:
       - ./amplify/**
     extensions:
@@ -10,9 +10,6 @@ projects:
         codeGenTarget: javascript
         generatedFileName: ''
         docsFilePath: src/graphql
-        region: us-east-2
-        apiId: s7puinoagvetfhrwlghwa3kpsa
-        maxDepth: 2
 extensions:
   amplify:
     version: 3
