--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -14,19 +14,19 @@
         "authConfig": {
           "additionalAuthenticationProviders": [
             {
-              "authenticationType": "AMAZON_COGNITO_USER_POOLS",
-              "userPoolConfig": {
-                "userPoolId": "authphotoportfolio7e5401aa"
-              }
+              "apiKeyConfig": {
+                "apiKeyExpirationDate": "2024-05-02T06:31:29.755Z",
+                "apiKeyExpirationDays": 180,
+                "description": ""
+              },
+              "authenticationType": "API_KEY"
             }
           ],
           "defaultAuthentication": {
-            "apiKeyConfig": {
-              "apiKeyExpirationDate": "2023-12-03T09:06:52.415Z",
-              "apiKeyExpirationDays": 30,
-              "description": "photoportfolioapikey"
-            },
-            "authenticationType": "API_KEY"
+            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+            "userPoolConfig": {
+              "userPoolId": "authphotoportfolio7e5401aa"
+            }
           }
         }
       },
