--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -14,10 +14,12 @@
         "authConfig": {
           "additionalAuthenticationProviders": [
             {
+              "authenticationType": "AWS_IAM"
+            },
+            {
               "apiKeyConfig": {
-                "apiKeyExpirationDate": "2024-05-02T06:31:29.755Z",
-                "apiKeyExpirationDays": 180,
-                "description": ""
+                "apiKeyExpirationDays": 30,
+                "description": "api key description"
               },
               "authenticationType": "API_KEY"
             }
