--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "aws-amplify": "^5.3.11",
     "exif-js": "^2.3.0",
     "mdb-react-ui-kit": "^6.3.0",
+    "nth-check": ">=2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
