--- a/.gitignore
+++ b/.gitignore
@@ -159,8 +159,9 @@ amplify/.config/local-*
 amplify/logs
 amplify/mock-data
 amplify/mock-api-resources
-amplify/backend/amplify-meta.json
+amplify/
 amplify/backend/.temp
+amplify/team-provider-info.json
 build/
 dist/
 node_modules/
