--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-anchor-link-smooth-scroll": "^1.0.4",
     "aws-amplify": "^5.3.11",
+    "bootstrap": "^5.3.2",
     "exif-js": "^2.3.0",
     "mdb-react-ui-kit": "^6.3.0",
     "nth-check": ">=2.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.1",
     "react-scripts": "5.0.1",
