--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -10,6 +10,9 @@ projects:
         codeGenTarget: javascript
         generatedFileName: ''
         docsFilePath: src/graphql
+        region: us-east-2
+        apiId: null
+        maxDepth: 3
 extensions:
   amplify:
     version: 3
