--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-anchor-link-smooth-scroll": "^1.0.4",
     "animate.css": "^4.1.1",
     "aws-amplify": "^5.3.13",
+    "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
     "exif-js": "^2.3.0",
     "mdb-react-ui-kit": "^6.3.0",
